--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -1,14 +1,21 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="QTt-UT-xPf">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--GameBoardViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" userLabel="GameBoardViewController" customClass="GameBoardViewController" customModule="TicTacToe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +23,130 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="x" translatesAutoresizingMaskIntoConstraints="NO" id="Bgd-KB-mNe">
+                                <rect key="frame" x="10" y="84" width="15" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="15" id="9uv-hk-5vg"/>
+                                    <constraint firstAttribute="height" constant="15" id="lUG-42-tBz"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="o" translatesAutoresizingMaskIntoConstraints="NO" id="h6d-gO-PBj">
+                                <rect key="frame" x="10" y="114" width="15" height="15"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Player 1 (You)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GMC-FP-Ryr">
+                                <rect key="frame" x="30" y="81" width="319" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Z4Y-J3-SPI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Player 2 (Machine)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hc-cy-tCz">
+                                <rect key="frame" x="30" y="111.5" width="319" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="MDk-Wg-2OV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tuG-4M-v4d">
+                                <rect key="frame" x="10" y="162.5" width="355" height="355"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="tuG-4M-v4d" secondAttribute="height" multiplier="1:1" id="NaI-l6-qov"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="3" id="K6V-0K-4Aj">
+                                    <size key="itemSize" width="116" height="116"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoardCell" id="Yyf-GE-tBc" customClass="BoardCell" customModule="TicTacToe" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="116" height="116"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="116"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="x" translatesAutoresizingMaskIntoConstraints="NO" id="wg5-1z-qwn">
+                                                    <rect key="frame" x="29" y="29" width="58" height="58"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="wg5-1z-qwn" firstAttribute="centerX" secondItem="Yyf-GE-tBc" secondAttribute="centerX" id="E1z-O0-Gp2"/>
+                                            <constraint firstItem="wg5-1z-qwn" firstAttribute="centerY" secondItem="Yyf-GE-tBc" secondAttribute="centerY" id="qUA-Gq-zzc"/>
+                                            <constraint firstItem="wg5-1z-qwn" firstAttribute="width" secondItem="Yyf-GE-tBc" secondAttribute="width" multiplier="0.5" id="qgP-cu-gvy"/>
+                                            <constraint firstItem="wg5-1z-qwn" firstAttribute="height" secondItem="Yyf-GE-tBc" secondAttribute="height" multiplier="0.5" id="uTe-wh-Ljo"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="wg5-1z-qwn" id="ubA-gN-dHE"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ger-Yi-fBK"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="twT-Po-o25"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="GMC-FP-Ryr" secondAttribute="trailing" constant="10" id="7eK-Ct-Jas"/>
+                            <constraint firstItem="0hc-cy-tCz" firstAttribute="centerY" secondItem="h6d-gO-PBj" secondAttribute="centerY" id="G0d-wh-uss"/>
+                            <constraint firstItem="GMC-FP-Ryr" firstAttribute="leading" secondItem="Bgd-KB-mNe" secondAttribute="trailing" constant="5" id="IuH-4k-WCs"/>
+                            <constraint firstItem="h6d-gO-PBj" firstAttribute="width" secondItem="Bgd-KB-mNe" secondAttribute="width" id="Ng8-mV-FPx"/>
+                            <constraint firstItem="tuG-4M-v4d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WXd-AQ-Zap"/>
+                            <constraint firstItem="Bgd-KB-mNe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="cUu-MD-zX3"/>
+                            <constraint firstItem="h6d-gO-PBj" firstAttribute="height" secondItem="Bgd-KB-mNe" secondAttribute="height" id="cZJ-bt-8iJ"/>
+                            <constraint firstItem="Bgd-KB-mNe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="dIc-Jc-FTW"/>
+                            <constraint firstAttribute="trailing" secondItem="tuG-4M-v4d" secondAttribute="trailing" constant="10" id="dmc-k0-dQk"/>
+                            <constraint firstItem="h6d-gO-PBj" firstAttribute="leading" secondItem="Bgd-KB-mNe" secondAttribute="leading" id="eV8-w9-M1P"/>
+                            <constraint firstItem="h6d-gO-PBj" firstAttribute="top" secondItem="Bgd-KB-mNe" secondAttribute="bottom" constant="15" id="enC-tt-bFl"/>
+                            <constraint firstItem="GMC-FP-Ryr" firstAttribute="centerY" secondItem="Bgd-KB-mNe" secondAttribute="centerY" id="gcO-9R-lEp"/>
+                            <constraint firstItem="0hc-cy-tCz" firstAttribute="width" secondItem="GMC-FP-Ryr" secondAttribute="width" id="i1S-Z9-kXH"/>
+                            <constraint firstItem="0hc-cy-tCz" firstAttribute="leading" secondItem="GMC-FP-Ryr" secondAttribute="leading" id="od7-Cs-xzE"/>
+                            <constraint firstItem="tuG-4M-v4d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="pI5-OY-WKN"/>
+                            <constraint firstItem="tuG-4M-v4d" firstAttribute="top" secondItem="0hc-cy-tCz" secondAttribute="bottom" constant="30" id="upR-FX-yog"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Tic Tac Toe" id="NHf-R3-Zlo">
+                        <barButtonItem key="rightBarButtonItem" title="New Game" id="Pbm-q0-dYJ"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="tuG-4M-v4d" id="9O9-xI-aSl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1079.2" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Zj6-Bc-VpB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QTt-UT-xPf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jTJ-ZX-uXt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="RYs-0l-Eby"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wF9-ii-fZJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="o" width="50" height="50"/>
+        <image name="x" width="50" height="50"/>
+    </resources>
 </document>
