--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Player 2 (Machine)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hc-cy-tCz">
-                                <rect key="frame" x="30" y="111.5" width="319" height="21"/>
+                                <rect key="frame" x="30" y="111" width="319" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="MDk-Wg-2OV"/>
                                 </constraints>
@@ -53,7 +53,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tuG-4M-v4d">
-                                <rect key="frame" x="10" y="162.5" width="355" height="355"/>
+                                <rect key="frame" x="10" y="162" width="355" height="355"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tuG-4M-v4d" secondAttribute="height" multiplier="1:1" id="NaI-l6-qov"/>
@@ -94,14 +94,20 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="twT-Po-o25"/>
                                 </connections>
                             </collectionView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="d8M-wX-HOq">
+                                <rect key="frame" x="169" y="321" width="37" height="37"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="GMC-FP-Ryr" secondAttribute="trailing" constant="10" id="7eK-Ct-Jas"/>
                             <constraint firstItem="0hc-cy-tCz" firstAttribute="centerY" secondItem="h6d-gO-PBj" secondAttribute="centerY" id="G0d-wh-uss"/>
                             <constraint firstItem="GMC-FP-Ryr" firstAttribute="leading" secondItem="Bgd-KB-mNe" secondAttribute="trailing" constant="5" id="IuH-4k-WCs"/>
+                            <constraint firstItem="d8M-wX-HOq" firstAttribute="centerX" secondItem="tuG-4M-v4d" secondAttribute="centerX" id="KC1-Fl-3hw"/>
                             <constraint firstItem="h6d-gO-PBj" firstAttribute="width" secondItem="Bgd-KB-mNe" secondAttribute="width" id="Ng8-mV-FPx"/>
                             <constraint firstItem="tuG-4M-v4d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WXd-AQ-Zap"/>
+                            <constraint firstItem="d8M-wX-HOq" firstAttribute="centerY" secondItem="tuG-4M-v4d" secondAttribute="centerY" id="aVr-CG-0LZ"/>
                             <constraint firstItem="Bgd-KB-mNe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="cUu-MD-zX3"/>
                             <constraint firstItem="h6d-gO-PBj" firstAttribute="height" secondItem="Bgd-KB-mNe" secondAttribute="height" id="cZJ-bt-8iJ"/>
                             <constraint firstItem="Bgd-KB-mNe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="dIc-Jc-FTW"/>
@@ -123,6 +129,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="activityView" destination="d8M-wX-HOq" id="zhL-gU-eWV"/>
                         <outlet property="collectionView" destination="tuG-4M-v4d" id="9O9-xI-aSl"/>
                     </connections>
                 </viewController>
